<resources>
    <string name="app_name">Hintman</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_option">Choose a way to login in to the application</string>
    <string name="login_in_mail">Login using mail</string>
    <string name="login_in_google">Login using Google</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="creation">Create a new account</string>
    <string name="dont_have">Do not have an account?</string>
    <string name="create_account">Create one</string>
    <string name="already_have">Already have an account?</string>
    <string name="login_in_account">Log in to your account</string>
    <string name="login_in">Log in</string>
    <string name="register">Register</string>

    <string name="welcome">Welcome to Hintman!</string>
    <string name="app_info">Hintman is a password hint manager that allows for creating and storing
    hints for your passwords. Here you can scan the qr code from the google chrome extension to see the
    password hint for the scanned website.</string>
    <string name="use_scanner">Try it now</string>

    <string name="no_hint">"You do not have a hint for this page"</string>
    <string name="page_hint">Hint for the page %1$s</string>

    <string name="scan_again">Scan again</string>
    <string name="tmp">Im a placeholder</string>

    <string name="scan">Scan QR code</string>
    <string name="log_out">Log out</string>
</resources>