<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MailAuthActivity">

    <TextView
        android:id="@+id/other_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dont_have"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.17" />

    <android.widget.Button
        android:id="@+id/register_activity_button"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_border"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_option" />

    <EditText
        android:id="@+id/email_textfield"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/text_color"
        android:ems="10"
        android:hint="@string/email"
        android:autofillHints="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/password_textfield"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_textfield"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/text_color"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:autofillHints="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/loginin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/login_in_account"
        android:textColor="@color/text_color"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/email_textfield"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.Button
        android:id="@+id/login_button"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_border"
        android:text="@string/login_in"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_textfield" />

</androidx.constraintlayout.widget.ConstraintLayout>