<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome"
        android:textColor="@color/text_color"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/app_info_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/app_info_text"
        android:layout_width="340dp"
        android:layout_height="233dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/app_info"
        android:textColor="@color/text_color"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/scan_button"
        android:layout_width="256dp"
        android:layout_height="56dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_border"
        android:text="@string/use_scanner"
        android:textColor="@color/text_color"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_info_text" />

</androidx.constraintlayout.widget.ConstraintLayout>